syntax = "proto3";


package test.message;

option java_package = "io.edap.protobuf.test.message.v3";

message OneUint32 {
    uint32 value = 1;
}