syntax = "proto3";


package test.message;

option java_package = "io.edap.protobuf.test.message.v3";

message OneInt32 {
    int32 value = 1;
}