syntax = "proto3";


package test.message;

option java_package = "io.edap.protobuf.test.message.v3";
//option java_outer_classname = "MessageOuter";

message OneFixed32 {
    fixed32 value = 1;
}